--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,330 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0;
+}
+@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&display=swap');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css');
+body{
+  font-family: "Dosis", sans-serif;
+  font-size: 14px;
+  color: rgba(0,0,0,0.8);
+  overflow-x: hidden;
+}
+ul{
+  margin-bottom: 0 !important;
+  padding-left: 0 !important;
+}
+.btn-sml{text-transform: capitalize !important; font-size: 13px !important; color: #000 !important; border: 1px solid #000 !important;}
+.btn-sml svg{font-size: 20px !important; }
+.btn-blue{background: #233a95 !important; color: #fff !important; text-transform: capitalize !important;}
+.btn-big{font-size: 15px !important; padding: 7px 30px !important; min-width: auto !important;}
+.btn-round{border-radius: 30px !important;}
+.badge{display: inline-block; padding: 7px 10px;}
+.badge.bg-success {background: #e5f8ed !important; color: #16b858 !important;}
+.bg-blue{
+  background: #cdc1b6;
+ 
+}
+.cursor{
+  cursor:pointer;
+}
+.text-light{
+  color: #8b8b8b !important;
+}
+.text-sml{
+  font-size: 14px;
+}
+::-webkit-scrollbar{width: 8px; height: 8px;}
+::-webkit-scrollbar-thumb{background: #ccc !important;}
+::-webkit-scrollbar-track{background: transparent !important;}
+.headerWrapper .top-strip{padding: 8px 0px;}
+.headerWrapper .top-strip p{color: #010101; font-size: 16px; font-weight:500;}
+.headerWrapper .header{
+  width: 100%; height: auto; padding: 25px 0px;
+}
+.logoWrapper img{width: 100px; height: 100px;}
+
+.headerWrapper .header .part2 .countryDrop{
+  width:170px;height:60px;min-width:150px;
+  text-align: left;
+  justify-content: flex-start !important;
+  color: #000 !important;
+  border: 1px solid rgba(0,0,0,0.2)!important;
+  border-radius: 7px !important;
+ 
+}
+.headerWrapper .header .part2 .countryDrop .label{
+  font-size:12px !important;text-transform:capitalize !important;color:rgba(0,0,0,0.4) !important; line-height: 16px;
+}
+.headerWrapper .header .part2 .countryDrop .name{
+  font-size:14px !important;text-transform:capitalize !important;color:#233a95 !important; font-weight: 700; line-height: 16px;
+}
+.headerWrapper .header .part2 .countryDrop span.ml-auto svg{
+  opacity: 0.7;
+
+}
+nav{border-bottom: 1px solid rgba(0,0,0,0.1); padding-bottom: 0px;}
+.locationModal .MuiPaper-elevation{
+  padding: 25px; position: relative;
+}
+.locationModal .countryList{margin-bottom: 0px; padding-left: 0px; max-height: 400px; overflow-y: scroll; overflow-x: hidden;}
+.locationModal .countryList li{width: 100%; list-style: none;}
+.locationModal .countryList li button{width: 100%; text-transform: capitalize !important; color: #000; justify-content: flex-start; padding: 15px 20px;}
+.locationModal .close_{position: absolute; top:20px; right:20px; color: #000 !important; min-width: 40px; width: 40px;height: 40px;border-radius: 50%;}
+.locationModal .close_ svg{font-size: 22px;}
+.locationModal .countryList li button:hover{
+  background: #f1f1f1 !important;
+}
+.locationModal .countryList li button .active{
+  background: #2bbef9;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+ .headerSearch{width:60%; height: 60px; background: #f3f4f7; padding: 5px; position: relative; border-radius: 5px; border: 1px solid rgba(0,0,0,0.1)}
+ .headerSearch input{width:100%; height: 45px; background: transparent !important; outline : none !important; font-size: 18px; padding:0px 20px !important; color: rgba(0,0,0,0.7); border: 0 !important}
+ .headerSearch input::-webkit-input-placeholder{color: rgba(0,0,0,0.6);}
+ .headerSearch button{position: absolute;top:10px; right: 20px; z-index: 100;min-width: 40px !important;height: 40px !important; width: 40px !important; border-radius: 50% !important; color:#000;border: 0 !important;
+  outline: none !important;
+  background: #f3f4f7 !important;}
+ .headerSearch button svg{font-size: 25px; opacity: 0.8;}
+
+
+header .part3 .circle{ align-items: center; justify-content: center; min-width: 45px !important;height: 45px !important;width: 40px !important; border-radius: 50% !important;border:1px solid rgba(0,0,0,0.1)!important;color: #000;background: #fff;
+
+}
+header .part3 .circle svg{font-size: 22px;}
+.cartTab .price{
+  font-size: 18px; color: rgba(0,0,0,0.8); font-weight: 700;
+}
+.cartTab button{
+  background: #fff1ee !important;
+}
+.cartTab button svg{
+  stroke: #ea2b0f !important;
+}
+.cartTab .count{
+  position: absolute; top:-6px; right: -4px; background: #ea2b0f; border-radius: 50%; color: #fff; width:20px; height: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+nav .allCatTab{ background: #2bbef9; padding: 10px 15px !important; border-radius: 30px !important;}
+nav .allCatTab *{color:#fff;}
+nav .allCatTab:hover{background:#2bbef9;}
+nav .allCatTab .text{font-weight:600;}
+nav .allCatTab .icon1{font-size:20px;}
+nav .allCatTab .icon2{font-size:15px;}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+nav .navpart1 .catWrapper{position: relative;}
+nav .navpart1 .catWrapper .sidebarNav{width: 300px; height: 0px; opacity:0; background: #fff; position: absolute; top:123%; left:0px; border: 1px solid rgba(0,0,0,0.1); padding: 15px 0px; transition: all 0.2s; visibility: hidden; z-index:100;  }
+nav .navpart1 .catWrapper .sidebarNav ul li{width: 100%; list-style: none; padding: 0px 10px;}
+nav .navpart1 .catWrapper .sidebarNav ul li button{color: #000; width:100%; justify-content: flex-start; text-transform: capitalize;}
+nav .navpart1 .catWrapper .sidebarNav ul li button svg{font-size: 12px;opacity: 0.6;}
+nav .navpart1 .catWrapper .sidebarNav ul li button:hover{background: transparent;}
+nav .navpart1 .catWrapper .sidebarNav.open{height: auto !important; visibility: inherit !important; opacity: 1 !important;}
+nav .navpart1 .catWrapper .sidebarNav ul li {position: static;}
+nav .navpart1 .catWrapper .sidebarNav ul li .submenu {position: absolute; top:0px;left:105%; width: 250px; height: 100%; background: #fff; z-index: 100; opacity: 0; visibility: hidden; transition: all 0.2s ease-in-out; border-left: 1px solid rgba(0,0,0,0.1); padding: 20px !important;}
+nav .navpart1 .catWrapper .sidebarNav ul li:hover .submenu{opacity: 1; visibility: inherit; left: 100%;}
+nav .navpart1 .catWrapper .sidebarNav ul li:hover .submenu button{border-radius: 0px !important;}
+nav .napart2 ul{margin-bottom: 0;}
+nav .navpart2 ul li {
+  padding-bottom: 20px;
+}
+nav .navpart2 ul li a{text-decoration: none;}
+nav .navpart2 ul li a button{font-size: 14px; font-weight: 600;text-decoration: none; color:rgba(0,0,0,0.6); text-transform: uppercase; display: flex; padding: 10px 15px; align-items: center; transition: all 0.2s ease-in-out; border-radius: 25px;}
+nav .navpart2 ul li a:hover{
+  background: #f0faff;color: #2bbef9;
+}
+nav .navpart2 ul li a svg{font-size: 15px;}
+nav .navpart2 ul li{position: relative;}
+nav .navpart2 ul li .submenu{position: absolute; top: 100%; left:0px; min-width:200px; background: #fff; opacity:0; visibility: hidden; transition: all 0.2s ease-in-out; z-index:100 !important;}
+nav .navpart2 ul li .submenu a{display: block; width:100%;}
+nav .navpart2 ul li .submenu a button{width:100%; justify-content: flex-start; border-radius: 0px; text-transform: capitalize; font-weight: 600;}
+nav .navpart2 ul li .submenu a button:hover{background: #f1f1f1 !important;}
+nav .navpart2 ul li:hover .submenu{opacity: 1; visibility: inherit; top:100%;}
+.homeBannerSection .slick-slide img {
+  width: 100%;
+ }
+.homeBannerSection .slick-track {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: stretch;
+}
+.homeBannerSection *{outline: none !important;}
+.homeBannerSection{position: relative; overflow:inherit;}
+.homeBannerSection .swiper{overflow: inherit !important;}
+.homeBannerSection .swiper .item{overflow: hidden !important; border-radius: 10px;}
+.homeBannerSection .slick-arrow{position: absolute; top:45%; z-index: 100; display: flex; justify-content: center; text-align: center;width: 40px !important; height:40px !important; background: #444; border-radius: 100%;font-family: FontAwesome !important; font-weight: 900; box-shadow: 0 1px 3px rgba(0 0 0 / 12%),0 1px 2px rgba(0 0 0 / 24%)!important ;}
+ .slick-next{right: 25px !important;}
+ .slick-next::before{font-family: FontAwesome !important; color:#fff;}
+.slick-prev{left: 25px !important;}
+.slick-prev::before{font-family: FontAwesome !important;  color:#fff;}
+
+/*product section */
+
+.homeProducts{
+  padding: 25px 0px;
+  width: 100%;
+}
+.homeProducts .banner{
+  width: 100%; border-radius: 7px; overflow: hidden;
+}
+ .hd{font-size: 25px; font-weight: 600; text-transform: uppercase;}
+.viewAllBtn{padding: 5px 25px !important; background: #fff; border:1px solid rgba(0,0,0,0.1)!important; border-radius: 30px !important; color:#414141 !important; font-weight: 600; text-transform: capitalize;}
+.viewAllBtn svg{font-size:20px;}
+.productItem{width:100%;height: auto;border:1px solid rgba(0,0,0,0.1); cursor: pointer; position: relative;}
+.productItem .badge{display: inline-block; padding: 7px 10px; position: absolute; top:20px; left:20px; z-index:100;}
+.productItem .info{padding: 15px;}
+.info .oldPrice{font-size:16px; font-weight: bold; color:rgba(0,0,0,0.2); text-decoration: line-through;}
+.info .oldPrice.lg{font-size: 20px !important;}
+.info .netPrice{font-size:16px; font-weight: bold;}
+.info .netPrice.lg{font-size: 20px !important;}
+.productItem .info h4{font-size:15px; font-weight: 600;}
+.productItem .actions{position: absolute; top:20px; right:-100px; z-index: 1000; display: flex; flex-direction: column; gap: 10px; transition: all 0.5s ease-in-out;}
+.productItem .actions button{display: flex; align-items: center; justify-content: center; min-width: 40px !important; width: 40px !important; height: 40px !important; border: 1px solid rgba(0,0,0,0.1) !important; border-radius: 50% !important; background: #fff !important; box-shadow: 0 1px 3px rgba(0 0 0 / 12%),0 1px 2px rgba(0 0 0 / 24%)!important; transition: al ll 0.0s;}
+.productRow .productItem{border-right: 1px solid transparent !important;}
+.productItem .actions button:hover{background: #233a95 !important;}
+.productItem .imgWrapper{overflow: hidden;}
+.productItem .imgWrapper img{transition: all 0.3s ease-in-out;}
+.productItem .imgWrapper:hover .actions{opacity: 1 !important; right:10px;}
+.productItem .imgWrapper:hover img{transform: scale(1.1);}
+.productItem .actions button:hover svg{color: #fff !important;}
+.productItem .actions button svg{color: #000 !important; opacity: 0.8; pointer-events: none; font-size: 16px;}
+.productRow .swiper-slide:last-child .productItem{border: 1px solid rgba(0,0,0,0.1) !important;}
+.swiper{padding-right: 1px !important;}
+  .badge-primary{background: #2bbef9 !important;}
+  .swiper-button-prev, .swiper-button-next {
+    border: 1px solid #ddd !important;
+    border-radius: 50%;
+    width: 35px !important;
+    height: 35px !important;
+    background: #fff;
+    z-index: 999 !important;
+}
+.swiper-button-next:after, .swiper-rtl .swiper-button-prev:after {
+  content: 'next';
+  font-size: 16px !important;
+  color: #000;
+}
+.swiper-button-prev:after, .swiper-rtl .swiper-button-next:after {
+  content: 'prev';
+  font-size: 16px !important;
+  color: #000;
+}
+.homeCat{padding: 35px 0px;}
+.homeCat .swiper{overflow: inherit !important;}
+.homeCat .swiper .item{padding: 15px; width:100%; height: auto; border-radius:10px;}
+.homeCat .swiper .item img{width: 80%;}
+.homeCat  .swiper-button-prev, .homeCat .swiper-button-next {
+  border: 1px solid #ddd !important;
+  border-radius: 50%;
+  width: 30px !important;
+  height: 30px !important;
+  background: #fff;
+  top: -30px !important;
+}
+.homeCat  .swiper-button-prev{right: 68px !important;left: inherit;}
+.homeCat .swiper-button-next:after, .swiper-rtl .swiper-button-prev:after {
+  content: 'next';
+  font-size: 12px !important;
+  color: #000;
+}
+.swiper-button-prev:after, .swiper-rtl .swiper-button-next:after {
+  content: 'prev';
+  font-size: 12px !important;
+  color: #000;
+}
+.productRow2{flex-wrap: wrap; gap:10px;}
+.productRow2 .productItem{width: 24%; overflow: hidden; border-right: 1px solid rgba(0,0,0,0.1)!important;}
+.bannerSec{gap: 15px;}
+.sticky{position: sticky; top:10px;z-index: 100;}
+.newsLetterSection{width:100%;height: auto ;background: #233a95; position: relative; overflow: hidden; padding: 70px 0px;}
+.newsLetterSection .col-md-6{position: static !important;}
+.newsLetterSection p{font-size: 18px; margin: 10px 0px;}
+.newsLetterSection h3{font-size:35px;font-weight: bold;}
+.newsLetterSection p.text-light{color:#fff !important;opacity: 0.5;font-size: 15px;}
+.newsLetterSection img{position:absolute;bottom: 0px;right: 0px;}
+.newsLetterSection form{width: 100%; height: 60px; background: #fff; padding: 10px; position: relative;border-radius: 5px;}
+.newsLetterSection form svg{position: absolute; top: 17px; left:10px; font-size: 25px; opacity: 0.3 ;}
+.newsLetterSection form input{  width: 100%; height: 100%; background: #fff!important; outline: none !important; border: 0px !important; padding-left: 40px; padding-right: 200px;}
+.newsLetterSection form button{position: absolute; top:6px;right: 7px;background-color: #233a95!important; font-size: 14px !important; padding: 12px 25px !important; color: #fff !important; text-transform: capitalize !important; font-weight: 600 !important;}
+
+footer{width: 100%; height: 500px; margin:auto; background: #fff; padding:25px 0px;}
+footer .topInfo{border-bottom: 1px solid rgba(0,0,0,0.1); padding-bottom: 20px;}
+footer .topInfo .col{padding: 10px 15px; padding-left: 40px; border-right: 1px solid rgba(0,0,0,0.2);}
+footer .topInfo .col:last-child{border-right: 0px;}
+footer .topInfo .col svg{font-size: 26px;}
+footer .topInfo .col span{font-size: 14px; font-weight: 600;}
+
+footer .linksWrap h5{font-size: 15px; margin-bottom: 20px;font-weight: 600;}
+footer .linksWrap ul li{list-style:none !important; margin-bottom: 10px;}
+footer .linksWrap ul li a{color: #71778e; font-size: 14px; text-decoration: none;}
+footer .linksWrap ul li a:hover{text-decoration: none !important;}
+
+footer .copyright ul li a{display: flex; align-items: center; justify-content: center;width: 35px; height: 35px; border-radius: 50%; border: 1px solid rgba(0,0,0,0.2); transition: all 0.3s ease-in-out;}
+footer .copyright ul li a svg{font-size: 16px; color: rgba(0,0,0,0.8);}
+footer .copyright ul li a:hover{background: #2bbef9 !important;}
+footer .copyright ul li a:hover svg{color: #fff !important;}
+
+.productModal .MuiPaper-elevation{padding: 25px; position:relative; max-width:900px !important; width:900px !important;}
+.productModal h4{font-size: 20px !important;color:rgpa(0, 0, 0, 0.8) !important;}
+
+.productZoom{width: 100%; height: auto;  padding: 0px; overflow: hidden; border-radius: 15px;}
+.productZoom .badge{position: absolute; top: 20px; left: 20px; z-index: 100;}
+.zoomSliderBig{width: 100% !important}
+.zoomSlider .slick-slide{ padding-right: 20px !important;}
+.zoomSlider *{outline: none !important;}
+.zoomSlider .item{border: 2px solid transparent !important; overflow: hidden; border-radius: 15px; cursor: pointer;}
+.zoomSlider .slick-current.item{border: 2px solid #3bb77e !important;}
+.zoomSlider .slick-arrow{top: 55% !important; zoom: 80% !important;}
+.zoomSlider .slick-arrow .slick-next{right: -2% !important;}
+.zoomSlider .slick-arrow .slick-prev{left: -5% !important;}
+
+.zoomSlider{padding-top: 10px;}
+.quantityDrop{width: 150px; gap:20px;}
+.quantityDrop button{min-width: 40px !important; width:40px !important; height: 40px !important; border-radius: 50% !important; background: #edeef5 !important; border: 1px solid rgba(0, 0, 0, 0.1)!important; color: #000;}
+.quantityDrop button svg{color:#000 !important}
+.quantityDrop input{width: 30px; border: 0px; background: transparent; outline: none !important;text-align: center;}
+
+.productModal .actions button{color: #000 !important; border: 1px solid rgba(0,0,0,0.1) !important; font-size: 10px !important;}
+.productModal .actions button svg{font-size: 15px !important;}
+
+
+.swiper {
+  width: 100%;
+  height: 100%;
+  background: #000;
 }
 
-.App-link {
-  color: #61dafb;
+.swiper-slide {
+  font-size: 18px;
+  color: #fff;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 40px 60px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.parallax-bg {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 130%;
+  height: 100%;
+  -webkit-background-size: cover;
+  background-size: cover;
+  background-position: center;
+}
+
+.swiper-slide .title {
+  font-size: 41px;
+  font-weight: 300;
+}
+
+.swiper-slide .subtitle {
+  font-size: 21px;
+}
+
+.swiper-slide .text {
+  font-size: 14px;
+  max-width: 400px;
+  line-height: 1.3;
 }
