--- a/src/App.css
+++ b/src/App.css
@@ -172,11 +172,32 @@ nav .navpart2 ul li:hover .submenu{opacity: 1; visibility: inherit; top:100%;}
 
 
 /*product section */
-
-.homeProducts{
+.homeSection{
+  padding: 25px 0px;
+  width: 100%;
+  background: #F6F9FC !important;
+}
+.trendingJobs{
+  background-color: #F6F9FC;
   padding: 25px 0px;
   width: 100%;
 }
+
+.grid-container {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  grid-gap: 10px;
+  background-color: #2196F3;
+  padding: 10px;
+}
+
+.grid-container > div {
+  background-color: rgba(255, 255, 255, 0.8);
+  text-align: center;
+  padding: 20px 0;
+  font-size: 30px;
+}
+
 .homeProducts .banner{
   width: 100%; border-radius: 7px; overflow: hidden;
 }
@@ -334,4 +355,155 @@ footer .copyright ul li a:hover svg{color: #fff !important;}
 .css-1e6y48t-MuiButtonBase-root-MuiButton-root:hover{
   background-color: #cdc1b6 !important;
   color: #fff !important;
+}
+.section.companyShortInto{
+  padding: 25px 0px;
+  width: 100%;
+ 
+}
+.team{
+  padding: 25px 0px;
+  width: 100%;
+ 
+}
+
+.carousel-root {
+  width: 64% !important;
+  margin: auto !important;
+  margin-top: 3% !important;
+}
+
+.carousel .slide {
+  background: #fff !important;
+  color: black;
+  height: 100%;
+}
+
+.carousel .slide img {
+  width: 139px !important;
+  border-radius: 50%;
+
+
+}
+
+.myCarousel {
+  background: #e8ecef;
+  margin-top: -6%;
+  width: 54%;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 6%;
+  padding-bottom: 9%;
+  padding-left: 5%;
+  padding-right: 5%;
+  border: 1px solid #e8ecef;
+  height: 286px;
+}
+
+.carousel .control-dots {
+  padding-left: 5px !important;
+  outline: 0;
+  bottom: 5% !important;
+}
+
+.myCarousel h3 {
+  color: #222;
+  font-weight: 100;
+  letter-spacing: 0.2px;
+  margin-bottom: 5px;
+  font-weight: 600;
+  text-transform: uppercase;
+  font-size: 17px;
+}
+
+.myCarousel h4 {
+  text-transform: uppercase;
+  margin-top: 0;
+  padding-top: 0;
+  font-weight: 500;
+  color: #787878;
+  font-size: 14px;
+}
+
+.myCarousel p {
+  font-weight: 100 !important;
+  line-height: 29px !important;
+  color: #222;
+  font-size: 15px;
+  font-family: sans-serif;
+  max-height: 67px;
+}
+
+.myCarousel p:before {
+  content: "“";
+  color: #aaa;
+  font-size: 26px;
+  font-family: monospace;
+  font-weight: 100;
+}
+
+.myCarousel p:after {
+  content: "”";
+  color: #aaa;
+  font-size: 26px;
+  font-family: monospace;
+  font-weight: 100;
+  line-height: 0;
+}
+
+.carousel .control-dots .dot {
+  box-shadow: none !important;
+  background: #454545 !important;
+  outline: 0;
+}
+
+.carousel.carousel-slider .control-arrow {
+  background: #000 !important;
+  height: 50px !important;
+  position: absolute;
+  top: 35% !important;
+}
+
+.App {
+  text-align: center;
+}
+
+@media only screen and (max-width: 934px) {
+  .carousel-root {
+    outline: 0;
+    width: 93% !important;
+    margin: auto !important;
+  }
+
+  .carousel.carousel-slider .control-arrow {
+    display: none !important;
+  }
+  .myCarousel {
+    background: #fafafa;
+    margin-top: -9%;
+    width: 88%;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 8%;
+    padding-bottom: 12.5%;
+    padding-left: 5%;
+    padding-right: 5%;
+    border: 1px solid #ddd;
+    height: 269px;
+  }
+
+  .carousel .slide img {
+    width: 24% !important;
+    border-radius: 50%;
+  }
+}
+
+.jobsInfo{
+ margin: 25px 0;
+    margin-right: 30px;
+    width: 100%;
+}
+.jobsInfo:hover{
+  transform: translateY(-10px);
+  box-shadow: 0 4px 20px #cdc1b6;
 }
