--- a/src/App.css
+++ b/src/App.css
@@ -276,15 +276,20 @@ nav .navpart2 ul li:hover .submenu{opacity: 1; visibility: inherit; top:100%;}
 .sticky{position: sticky; top:10px;z-index: 100;}
 .newsLetterSection{width:100%;height: auto ;background: #6c757d; position: relative; overflow: hidden; padding: 70px 0px;}
 .newsLetterSection .col-md-6{position: static !important;}
-.newsLetterSection p{font-size: 18px; margin: 10px 0px;}
+.newsLetterSection p{font-size: 18px !important; margin: 10px 0px !important;}
 .newsLetterSection h3{font-size:35px;font-weight: bold;}
 .newsLetterSection p.text-light{color:#fff !important;opacity: 0.5;font-size: 15px;}
-.newsLetterSection img{position:absolute;bottom: 0px;right: 0px;}
-.newsLetterSection form{width: 100%; height: 60px; background: #fff; padding: 10px; position: relative;border-radius: 5px;}
-.newsLetterSection form svg{position: absolute; top: 17px; left:10px; font-size: 25px; opacity: 0.3 ;}
-.newsLetterSection form input{  width: 100%; height: 100%; background: #fff!important; outline: none !important; border: 0px !important; padding-left: 40px; padding-right: 200px;}
-.newsLetterSection form button{position: absolute; top:6px;right: 7px;background-color: #6c757d!important; font-size: 14px !important; padding: 12px 25px !important; color: #fff !important; text-transform: capitalize !important; font-weight: 600 !important;}
 
+.newsLetterSection form{width: 100%; height: auto; 
+  position: relative; 
+  background: #F6F9FC;
+  padding: 30px 25px;}
+
+.newsLetterSection form input{  width: 100%; height: 100%; background: #fff!important; outline: none !important; border: 1px solid #cdc1b6 !important; padding-left: 40px; padding-right: 200px;}
+.newsLetterSection form button{background-color: #6c757d!important; font-size: 14px !important; padding: 12px 25px !important; color: #fff !important; text-transform: capitalize !important; font-weight: 600 !important;}
+.contactInfo{padding: 30px 15px 0; background-color:#474040 ;}
+.size11{    width: 355px;    padding: 10px 30px;
+  max-width: 100%;}
 footer{width: 100%; height: 500px; margin:auto; background: #fff; padding:25px 0px;}
 footer .topInfo{border-bottom: 1px solid rgba(0,0,0,0.1); padding-bottom: 20px;}
 footer .topInfo .col{padding: 10px 15px; padding-left: 40px; border-right: 1px solid rgba(0,0,0,0.2);}
@@ -503,7 +508,17 @@ footer .copyright ul li a:hover svg{color: #fff !important;}
     margin-right: 30px;
     width: 100%;
 }
-.jobsInfo:hover{
-  transform: translateY(-10px);
+
+
+
+.jobsInfo:hover {
   box-shadow: 0 4px 20px #cdc1b6;
+ 
 }
+
+
+.rightSubtitle{
+  margin-left: auto !important;
+}
+
+
