--- a/src/App.css
+++ b/src/App.css
@@ -860,7 +860,8 @@ font-size: 25px;
     font-size: 25px;
     font-weight: 600;}
     .aboutDetails h3{
-      padding: 20px 0px;
+      padding-top: 10px;
+      padding-bottom: 10px;
       font-size: 25px;
       font-weight: 600;
     }
@@ -880,8 +881,21 @@ font-size: 25px;
   }
   
   .box3 img {
-    object-fit: cover;
+    height: 100%;
+ max-width: 100%;
+      object-fit: cover;
+      width: auto;
+      /* border: 1px solid #ddd; */
+      border-radius: 7px;
+      margin-left: -36px;
+      padding: 10px 0px;
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+      transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+
   }
+  .lastSection {
+    margin-top: 25px;
+}
   .aboutBio1 {
     font-size: 17px;
     padding-bottom: 20px;
